Fix issues with zooming in/out on mobile
A number of issues were occurring with zooming and on mobile browsers, one of which was causing the 'keep shopping' button to appear. This fix 1) allows zooming and scaling to happen by the user, 2) stops long store names from making the page wider than the viewport, 3) does a better job of hiding the 'keep shopping' button. Font sizes are also slightly increased to prevent unwanted zooming on mobile when focusing on inputs

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -8,6 +8,7 @@
   left: 0
   overflow-y: scroll
   -webkit-overflow-scrolling: touch
+  opacity: 0
   padding-top: 100px
   padding-bottom: 100px
   position: fixed
@@ -15,6 +16,7 @@
   top: 100vh
   width: 100%
   z-index: 6
+  visibility: hidden
 
   > .wrapper
     +flexbox
@@ -27,7 +29,9 @@
       padding-top: 25px
 
   &.open
+    opacity: 1
     top: 0
+    visibility: visible
 
 .keep-shopping
   +transition(all .3s)
